feat: Add Figma and Miro embeds to Stack case study

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         
         <div class="hero-text">
-            <h1>TONI NAĐ</h1>
+            <h1>Toni Nađ</h1>
             <p>Product designer<span class="orange-dot">.</span></p>
         </div>
     </div>
