feat: Add color and typography cards to Stack case study

--- a/stack-case-study.html
+++ b/stack-case-study.html
@@ -194,6 +194,95 @@
                 <div class="content-block">
                     <h3>Design Evolution</h3>
                     <p>The design process focused on creating an interface that felt conversational rather than transactional. Early prototypes explored various input methods before landing on a clean, message-like interface that would feel familiar to users.</p>
+
+                    <h4>Color System</h4>
+                    <div class="color-grid">
+                        <div class="color-card">
+                            <div class="color-preview" style="background-color: #99CAFC;"></div>
+                            <div class="color-info">
+                                <h5>Primary Blue</h5>
+                                <p>#99CAFC</p>
+                                <span class="color-usage">Primary actions, interactive elements, and brand identity</span>
+                            </div>
+                        </div>
+                        <div class="color-card">
+                            <div class="color-preview" style="background-color: #FFFFFF;"></div>
+                            <div class="color-info">
+                                <h5>Background</h5>
+                                <p>#FFFFFF</p>
+                                <span class="color-usage">Main application background and card surfaces</span>
+                            </div>
+                        </div>
+                        <div class="color-card">
+                            <div class="color-preview" style="background-color: #000000;"></div>
+                            <div class="color-info">
+                                <h5>Text</h5>
+                                <p>#000000</p>
+                                <span class="color-usage">Primary text content and important information</span>
+                            </div>
+                        </div>
+                        <div class="color-card">
+                            <div class="color-preview" style="background-color: #FBE899;"></div>
+                            <div class="color-info">
+                                <h5>Today</h5>
+                                <p>#FBE899</p>
+                                <span class="color-usage">Tasks scheduled for today</span>
+                            </div>
+                        </div>
+                        <div class="color-card">
+                            <div class="color-preview" style="background-color: #ADE8AD;"></div>
+                            <div class="color-info">
+                                <h5>Someday</h5>
+                                <p>#ADE8AD</p>
+                                <span class="color-usage">Future tasks without specific dates</span>
+                            </div>
+                        </div>
+                        <div class="color-card">
+                            <div class="color-preview" style="background-color: #E099F5;"></div>
+                            <div class="color-info">
+                                <h5>Anytime</h5>
+                                <p>#E099F5</p>
+                                <span class="color-usage">Flexible tasks without time constraints</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4>Typography</h4>
+                    <div class="typography-grid">
+                        <div class="typography-card">
+                            <div class="font-preview" style="font-family: 'SF Pro Display', sans-serif;">
+                                <span class="font-sample">Aa</span>
+                                <p class="font-text">The quick brown fox jumps over the lazy dog</p>
+                            </div>
+                            <div class="font-info">
+                                <h5>SF Pro Display</h5>
+                                <p>Regular (400)</p>
+                                <span class="font-usage">Body text, descriptions, and secondary information</span>
+                            </div>
+                        </div>
+                        <div class="typography-card">
+                            <div class="font-preview" style="font-family: 'SF Pro Display', sans-serif; font-weight: 500;">
+                                <span class="font-sample">Aa</span>
+                                <p class="font-text">The quick brown fox jumps over the lazy dog</p>
+                            </div>
+                            <div class="font-info">
+                                <h5>SF Pro Display</h5>
+                                <p>Medium (500)</p>
+                                <span class="font-usage">Subheadings, important information, and interactive elements</span>
+                            </div>
+                        </div>
+                        <div class="typography-card">
+                            <div class="font-preview" style="font-family: 'SF Pro Display', sans-serif; font-weight: 600;">
+                                <span class="font-sample">Aa</span>
+                                <p class="font-text">The quick brown fox jumps over the lazy dog</p>
+                            </div>
+                            <div class="font-info">
+                                <h5>SF Pro Display</h5>
+                                <p>Semibold (600)</p>
+                                <span class="font-usage">Headers, task titles, and emphasis</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
