feat: Update social media links in contact section

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 <p class="contact-text">get in touch with me<span class="period">.</span></p>
                 <div class="footer-links">
                     <a href="mailto:hi@tnad.xyz">hi@tnad.xyz</a>
-                    <a href="https://linkedin.com" target="_blank">linkedin</a>
-                    <a href="https://instagram.com" target="_blank">instagram</a>
+                    <a href="https://linkedin.com/in/tnad/" target="_blank">linkedin</a>
+                    <a href="https://instagram.com/nad.tonii/" target="_blank">instagram</a>
                 </div>
             </div>
         </div>
